@@ -3,6 +3,9 @@ SubVersion: $Id$
 Run './configure --enable-static=yes --enable-shared=no' for use with 
 ValGrind. Run 'valgrind --tool=memcheck --leak-check=yes ./test'
 
+To do:
+- add check for 8x/9x compat (allow sending of .9kx on a V200 altough it's not a .v2k for instance)
+
 Log:
 
 - 02/02/2006, version 0.0.6: roms
